--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ElasticApm":
+  {
+    "LogLevel":  "Debug",
+    "ServerUrl":  "http://elasticsearch:9200",
+    "SecretToken":  "apm-server-secret-token",
+    "TransactionSampleRate": 1.0
+  }
 }
