--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -11,6 +11,8 @@
     "LogLevel":  "Debug",
     "ServerUrl":  "http://elasticsearch:9200",
     "SecretToken":  "apm-server-secret-token",
-    "TransactionSampleRate": 1.0
+    "TransactionSampleRate": 1.0,
+    "CaptureBody": "all",
+    "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
   }
 }
