--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -8,11 +8,6 @@
   "AllowedHosts": "*",
   "ElasticApm":
   {
-    "LogLevel":  "Debug",
-    "ServerUrl":  "http://elasticsearch:9200",
-    "SecretToken":  "apm-server-secret-token",
-    "TransactionSampleRate": 1.0,
-    "CaptureBody": "all",
-    "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
+    "ServerUrl":  "http://apm-server:8200"
   }
 }
